--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,7 @@ charset-normalizer==3.3.2
 idna==3.6
 beautifulsoup4==4.12.3
 lxml==5.1.0
+google-auth>=2.28.0
+google-auth-oauthlib>=1.2.0
+google-api-python-client>=2.126.0
+gunicorn>=21.2.0
